--- a/Grow.Server/Styles/backend.scss
+++ b/Grow.Server/Styles/backend.scss
@@ -16,6 +16,14 @@ input[disabled=disabled] {
     font-style: italic;
 }
 
+.row.no-card {
+    margin-bottom: 20px;
+}
+
+.row.centered {
+    justify-content: center;
+}
+
 /* Column selector input in the Backend vertical navbar */
 #contest-selector {
     background-color: transparent;
@@ -116,6 +124,78 @@ img.preview-large {
                 cursor: pointer;
                 background-color: rgba(0,0,0,0.1);
             }
+        }
+    }
+}
+
+/**
+* Pagination links
+* Based on plugin by Flavius Matis - https://github.com/flaviusmatis/simplePagination.js
+*/
+
+.simple-pagination {
+    display: block;
+    overflow: hidden;
+    padding: 0 5px 5px 0;
+    margin: 0;
+    list-style: none;
+
+    ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    li {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        float: left;
+    }
+
+    &.light-theme {
+        a, span {
+            float: left;
+            color: #666;
+            font-size: 14px;
+            line-height: 24px;
+            font-weight: normal;
+            text-align: center;
+            border: 1px solid #BBB;
+            min-width: 14px;
+            padding: 0 7px;
+            margin: 0 5px 0 0;
+            border-radius: 3px;
+            box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+            background: #efefef; /* Old browsers */
+            background: -moz-linear-gradient(top, #ffffff 0%, #efefef 100%); /* FF3.6+ */
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#efefef)); /* Chrome,Safari4+ */
+            background: -webkit-linear-gradient(top, #ffffff 0%,#efefef 100%); /* Chrome10+,Safari5.1+ */
+            background: -o-linear-gradient(top, #ffffff 0%,#efefef 100%); /* Opera11.10+ */
+            background: -ms-linear-gradient(top, #ffffff 0%,#efefef 100%); /* IE10+ */
+            background: linear-gradient(top, #ffffff 0%,#efefef 100%); /* W3C */
+        }
+
+        a:hover {
+            text-decoration: none;
+            background: #FCFCFC;
+        }
+
+        .current {
+            background: #666;
+            color: #FFF;
+            border-color: #444;
+            box-shadow: 0 1px 0 rgba(255,255,255,1), 0 0 2px rgba(0, 0, 0, 0.3) inset;
+            cursor: default;
+        }
+
+        .ellipse {
+            background: none;
+            border: none;
+            border-radius: 0;
+            box-shadow: none;
+            font-weight: bold;
+            cursor: default;
         }
     }
 }
