--- a/Grow.Server/Areas/Admin/Views/Events/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Events/Create.cshtml
@@ -9,7 +9,7 @@
 <h4>Event</h4>
 
 <hr />
-<entitysearch asp-type="@Html.GetController()" />
+<copyentity asp-type="@Html.GetController()" />
 <hr />
 
 <div class="row">
@@ -59,7 +59,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="HeldBy" class="control-label"></label>
-                <select asp-items="ViewBag.Partners" asp-for="HeldById" class="form-control"></select>
+                <search asp-for="HeldById" asp-type="@Html.GetControllerFor(e => e.HeldBy)" asp-current-only="true" class="form-control" />
                 <span asp-validation-for="HeldById" class="text-danger"></span>
             </div>
             <div class="form-group">
