--- a/Grow.Server/Styles/backend.scss
+++ b/Grow.Server/Styles/backend.scss
@@ -16,12 +16,20 @@ input[disabled=disabled] {
     font-style: italic;
 }
 
+textarea.form-control {
+    max-height: inherit;
+}
+
 .row.no-card {
     margin-bottom: 20px;
 }
 
 .row.centered {
     justify-content: center;
+}
+
+.indent {
+    padding-left: 20px;
 }
 
 /* Column selector input in the Backend vertical navbar */
@@ -81,6 +89,24 @@ tr.inactive {
     background: linear-gradient(270deg, rgba(255,255,255,0), rgba(135,228,252,0.35), rgba(255,255,255,0));
     background-size: 400% 100%;
     animation: loading-back 1.5s ease infinite;
+}
+
+/* Theme for inline cards */
+.card.bg-flat {
+    box-shadow: none;
+
+    .card-header {
+        padding-left: 0px;
+    }
+
+    .card-body {
+        border: 1px solid rgba(40, 24, 24, 0.14);
+        border-width: 0 0 0 2px;
+    }
+
+    h1, h2, h3, h4, h5 {
+        margin-top: 0;
+    }
 }
 
 /* Preview images */
