--- a/Grow.Server/Views/Shared/Layouts/_BackendLayout.cshtml
+++ b/Grow.Server/Views/Shared/Layouts/_BackendLayout.cshtml
@@ -13,6 +13,7 @@
     <title>@ViewBag.Title - GROW by PionierGarage</title>
 
     <link href="~/css/font-awesome.min.css" rel="stylesheet">
+    <link href="~/css/flatpickr.min.css" rel="stylesheet">
     <link href="~/plugins/paper-dashboard/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/plugins/paper-dashboard/css/paper-dashboard.min.css" rel="stylesheet" />
     <link href="~/css/backend.min.css" rel="stylesheet">
@@ -112,12 +113,8 @@
         </div>
     </div>
 
-    <script src="/plugins/paper-dashboard/js/core/popper.min.js"></script>
-    <script src="/plugins/paper-dashboard/js/core/bootstrap.min.js"></script>
-    <script src="/plugins/paper-dashboard/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-    <script src="/plugins/paper-dashboard/js/plugins/chartjs.min.js"></script>
-    <script src="/plugins/paper-dashboard/js/plugins/bootstrap-notify.js"></script>
-    <script src="/plugins/paper-dashboard/js/paper-dashboard.min.js"></script>
+    <script src="/js/flatpickr.min.js"></script>
+    <script src="/plugins/paper-dashboard/js/paper-dashboard-bundled.min.js"></script>
     <script src="/js/backend.min.js"></script>
 
     @RenderSection("Scripts", required: false)
