--- a/Grow.Server/wwwroot/css/backend.css
+++ b/Grow.Server/wwwroot/css/backend.css
@@ -24,6 +24,10 @@ textarea.form-control {
 .indent {
   padding-left: 20px; }
 
+.form-control.flatpickr-input, .form-control.flatpickr-input + .form-control[readonly=readonly] {
+  background-color: inherit;
+  cursor: pointer; }
+
 /* Column selector input in the Backend vertical navbar */
 #contest-selector {
   background-color: transparent;
