--- a/Grow.Server/Areas/Admin/Views/Accounts/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Accounts/Create.cshtml
@@ -1,4 +1,6 @@
-﻿@model Grow.Server.Areas.Admin.Models.ViewModels.AccountCreateViewModel
+﻿@model Grow.Server.Areas.Admin.Models.ViewModels.AccountEditViewModel
+@using Grow.Data.Entities
+@using Grow.Server.Model.Extensions
 
 @{
     ViewData["Title"] = "Create";
@@ -27,6 +29,11 @@
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="TeamId" class="control-label">Team</label>
+                <search asp-for="TeamId" asp-type="@(Html.GetControllerFor(c => c.Team))" asp-current-only="false" class="form-control" />
+                <span asp-validation-for="TeamId" class="text-danger"></span>
             </div>
             @if (ViewBag.IsSuperAdmin)
             {
