--- a/Grow.Server/Areas/Admin/Views/Accounts/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Accounts/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Grow.Server.Areas.Admin.Models.ViewModels.AccountCreateViewModel
+﻿@model Grow.Server.Areas.Admin.Models.ViewModels.AccountEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -26,6 +26,11 @@
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" placeholder="Leave empty to keep unchanged" />
                 <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="TeamId" class="control-label">Team</label>
+                <search asp-for="TeamId" asp-value="Team" asp-current-only="false" class="form-control" />
+                <span asp-validation-for="TeamId" class="text-danger"></span>
             </div>
             @if (ViewBag.IsSuperAdmin)
             {
