/Account/Index shows profile of current user and settings that can be partially edited (e.g. email)

--- a/Grow.Server/Areas/Admin/Views/Accounts/Details.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Accounts/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Grow.Server.Areas.Admin.Models.ViewModels.AccountViewModel
+﻿@model Grow.Server.Model.ViewModels.AccountViewModel
 
 @{
     ViewData["Title"] = "Details";
