--- a/Grow.Server/Areas/Admin/Views/Accounts/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Accounts/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Grow.Server.Areas.Admin.Models.ViewModels.AccountEditViewModel
+﻿@model Grow.Server.Model.ViewModels.AccountEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
