--- a/Grow.Server/Areas/Admin/Views/Files/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Files/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Grow.Server.Areas.Admin.Models.ViewModels.FileCreateViewModel
+﻿@model Grow.Server.Areas.Admin.Model.ViewModels.FileCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
