--- a/Grow.Server/Areas/Admin/Views/Accounts/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Accounts/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Grow.Server.Areas.Admin.Models.ViewModels.AccountEditViewModel
+﻿@model Grow.Server.Model.ViewModels.AccountEditViewModel
 @using Grow.Data.Entities
 @using Grow.Server.Model.Extensions
 
