--- a/Grow.Server/Areas/Admin/Views/Accounts/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Accounts/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Grow.Server.Areas.Admin.Models.ViewModels.AccountIndexViewModel>
+﻿@model IEnumerable<Grow.Server.Model.ViewModels.AccountIndexViewModel>
 
 @{
     ViewData["Title"] = "Accounts";
