--- a/Grow.Server/Views/Account/Index.cshtml
+++ b/Grow.Server/Views/Account/Index.cshtml
@@ -1,9 +1,82 @@
-﻿
+﻿@model Grow.Server.Model.ViewModels.AccountViewModel
 @{
-    ViewData["Title"] = "Welcome, " + User.Identity.Name;
+    ViewData["Title"] = "My Account";
 }
 
-<h4>Index</h4>
+<h4>Welcome, @User.Identity.Name</h4>
 <hr />
-...
+
+<div class="row">
+    <div class="col-xl-4 col-lg-6 col-md-12">
+
+        <div class="card bg-flat">
+            <div class="card-header">
+                <h6>Basic Information</h6>
+            </div>
+            <div class="card-body">
+                <form method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                    <div class="form-group">
+                        <label asp-for="Name"></label>
+                        <input asp-for="Name" class="form-control" readonly="readonly" />
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="Email"></label>
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Password</label>
+                        <a class="btn form-control" style="margin-top: 0;" asp-action="ChangePassword">
+                            Change Password
+                        </a>
+                    </div>
+
+                    <div class="form-group" style="text-align: center">
+                        <input type="submit" value="Save" class="btn btn-default" />
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="card bg-flat">
+            <div class="card-header">
+                <h6>Settings</h6>
+            </div>
+            <div class="card-body">
+                <form method="post">
+
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" /> Setting 1
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" /> Setting 2
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" /> Setting 3
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="form-group" style="text-align: center">
+                        <input type="submit" value="Save" class="btn btn-default" />
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
