--- a/Grow.Server/Views/Account/Login.cshtml
+++ b/Grow.Server/Views/Account/Login.cshtml
@@ -2,43 +2,52 @@
 
 @{
     ViewData["Title"] = "GROW Login";
+    Layout = "Layouts/_BackendLayout";
 }
 
-<h4>Login</h4>
-<hr />
-<form method="post">
-    <div asp-validation-summary="All" class="text-danger"></div>
+<div class="row">
+    <div class="offset-lg-4 col-md-12 col-lg-4">
+        <div class="card ">
+            <div class="card-body">
+                <h4>Login</h4>
+                <hr />
+                <form method="post">
+                    <div asp-validation-summary="All" class="text-danger"></div>
 
-    <input hidden asp-for="ReturnUrl" />
+                    <input hidden asp-for="ReturnUrl" />
 
-    <div class="form-group">
-        <label asp-for="UserName" class="control-label"></label>
-        <input asp-for="UserName" class="form-control" />
-        <span asp-validation-for="UserName" class="text-danger"></span>
-    </div>
+                    <div class="form-group">
+                        <label asp-for="UserName" class="control-label"></label>
+                        <input asp-for="UserName" class="form-control" />
+                        <span asp-validation-for="UserName" class="text-danger"></span>
+                    </div>
 
-    <div class="form-group">
-        <label asp-for="Password" class="control-label"></label>
-        <input asp-for="Password" class="form-control" />
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
+                    <div class="form-group">
+                        <label asp-for="Password" class="control-label"></label>
+                        <input asp-for="Password" class="form-control" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
 
-    <div class="form-group">
-        <div class="checkbox">
-            <label asp-for="RememberMe">
-                <input asp-for="RememberMe" />
-                @Html.DisplayNameFor(m => m.RememberMe)
-            </label>
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label asp-for="RememberMe">
+                                <input asp-for="RememberMe" />
+                                @Html.DisplayNameFor(m => m.RememberMe)
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="form-group" style="text-align: center">
+                        <input type="submit" value="Sign In" class="btn btn-default" />
+                    </div>
+
+                    <div class="form-group">
+                        <p>
+                            <a href="mailto:grow@pioniergarage.de">Forgot your password?</a>
+                        </p>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-
-    <div class="form-group">
-        <input type="submit" value="Sign In" class="btn btn-default" />
-    </div>
-
-    <div class="form-group">
-        <p>
-            <a href="mailto:grow@pioniergarage.de">Forgot your password?</a>
-        </p>
-    </div>
-</form>
+</div>
