--- a/Grow.Server/Views/Home/About.cshtml
+++ b/Grow.Server/Views/Home/About.cshtml
@@ -30,7 +30,7 @@
     {
         <section id="organizers" class="wrapper style4 container">
             <div class="content">
-                <header>
+                <header style="text-align: center">
                     <h3>The <strong>team</strong></h3>
                 </header>
                 @foreach (var orga in Model)
